--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,4 +1,7 @@
-server.port=80
+server.port=8443
+server.ssl.key-store=classpath:214216986040747.pfx
+server.ssl.key-store-password=214216986040747
+server.ssl.keyStoreType=PKCS12
 
 logging.level.ROOT=warn
 logging.level.com.xjy=info
