--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,5 @@ logging.file = D:/MyProject/adm_log
 
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+
+spring.http.encoding.charset=UTF-8
